[ES-2315] migration - java 11 to 21, springboot 2.6 to 3.2 (#1539)
* migration - java 11 to 21, springboot 2.6 to 3.2

Signed-off-by: Sachin Rana <sacrana324@gmail.com>

* java 21 migration corrections

Signed-off-by: Sachin Rana <sacrana324@gmail.com>

* added traceId spanId in access logs

Signed-off-by: Sachin Rana <sacrana324@gmail.com>

* corrected formatting

Signed-off-by: Sachin Rana <sacrana324@gmail.com>

* added logs for errors

Signed-off-by: Sachin Rana <sacrana324@gmail.com>

* corrected naming of some variables

Signed-off-by: Sachin Rana <sacrana324@gmail.com>

---------

Signed-off-by: Sachin Rana <sacrana324@gmail.com>